--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <style>*{margin:0;padding:0}@font-face{font-family:Steppe-Book;src:url(Steppe-Book.a7fc3ee738d3939e.ttf)}body{background:#5243F4;font-family:Steppe-Book,sans-serif;color:#fff}</style><link rel="stylesheet" href="styles.f1f7e2d541c37916.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f1f7e2d541c37916.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime.5435ea6014387c9b.js" type="module"></script><script src="polyfills.415d18fae5720c9c.js" type="module"></script><script src="main.7cc0631089ea9257.js" type="module"></script></body>
+<script src="runtime.5435ea6014387c9b.js" type="module"></script><script src="polyfills.415d18fae5720c9c.js" type="module"></script><script src="scripts.d1ac4a8b7885903a.js" defer></script><script src="main.6a2db6a8d1b355f6.js" type="module"></script></body>
 </html>
